--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@
             .main {
                 margin-left: 3px;
             }
+            .main_banner {
+                max-width: calc(100vw - 40px);
+                height: 900px;
+                background-position: center;
+                background-attachment: scroll;
+                background-image: url(img/banner.jpg);
+                background-color: rgba(23, 22, 20, 0.7);
+                background-blend-mode: overlay;
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+            .heading {
+                margin: 0 auto;
+                font-size: 26px;
+                line-height: 22px;
+                width: 280px;
+                text-align: center;
+            }
+            .list {
+                max-width: 350px;
+            }
         }
     </style>
     <div class="main_banner">
@@ -160,6 +181,7 @@
             <div class="white footer_text">
                 Мы делаем татуировки, за которые не стыдно!
             </div>
+            <div class="hhh"></div>
         </div>
     </div>
 </body>
