--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             margin: 0;
             box-sizing: border-box;
         }
+        @media only screen and (min-width: 600px) {
+            .heading {
+                padding-top: 71px;
+            }
+        }
         .white {
             font-family: 'Roboto Condensed', Arial, sans-serif;
             color: #fff5f5;
@@ -32,10 +37,12 @@
             background-repeat: no-repeat;
         }
         .main {
-            margin-left: 179.5px;
+            margin-left: 200.5px;
+        }
+        .logo {
+            display: none;
         }
         .heading {
-            padding-top: 71px;
             max-width: 775px;
             font-family: 'Century Gothic Paneuropean', sans-serif;
             color: #ce9b66;
@@ -112,38 +119,56 @@
             font-size: 25px;
             font-weight: 400;
         }
-        @media only screen and (max-width: 600px) {
+        @media only screen and (max-width: 450px) {
             body {
                 display: flex;
                 align-items: center;
             }
             .main {
-                margin-left: 3px;
+                
             }
             .main_banner {
-                max-width: calc(100vw - 40px);
+                max-width: 100%;
                 height: 900px;
-                background-position: center;
                 background-attachment: scroll;
                 background-image: url(img/banner.jpg);
                 background-color: rgba(23, 22, 20, 0.7);
+                background-position: center;
                 background-blend-mode: overlay;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
-            .heading {
+            .logo {
+                display: block;
                 margin: 0 auto;
-                font-size: 26px;
+                padding-top: 40px;
+                width: 140px;
+            }
+            .heading {
+                padding-top: 40px;
+                margin: 0 auto;
+                font-size: 22px;
                 line-height: 22px;
-                width: 280px;
+                width: 290px;
                 text-align: center;
             }
             .list {
-                max-width: 350px;
+                margin-left: 55px;
+                width: 220px;
+                line-height: normal;
+            }
+            .list_text {
+                font-size: 14px;
+                line-height: 22px;
+            }
+            .price_back {
+                width: 300px;
+                font-size: 14px;
             }
         }
     </style>
     <div class="main_banner">
+        <img src="img/logo.png" alt="" class="logo">
         <div class="main">
             <h1 class="heading">Студия художественной татуировки Tattoo-Leader в центре Москвы</h1>
             <div class="list white">
@@ -181,7 +206,6 @@
             <div class="white footer_text">
                 Мы делаем татуировки, за которые не стыдно!
             </div>
-            <div class="hhh"></div>
         </div>
     </div>
 </body>
