--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
                 
             }
             .main_banner {
-                max-width: 100%;
-                height: 900px;
+                max-width: 500px;
+                height: auto;
+                margin: 0 auto;
                 background-attachment: scroll;
                 background-image: url(img/banner.jpg);
                 background-color: rgba(23, 22, 20, 0.7);
@@ -137,6 +138,7 @@
                 background-blend-mode: overlay;
                 background-size: cover;
                 background-repeat: no-repeat;
+                object-fit: cover;
             }
             .logo {
                 display: block;
