--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 background-attachment: scroll;
                 background-image: url(img/banner.jpg);
                 background-color: rgba(23, 22, 20, 0.7);
-                background-position: center;
+                background-position: 75%;
                 background-blend-mode: overlay;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -150,9 +150,12 @@
                 text-align: center;
             }
             .heading_form {
+                padding-bottom: 10px;
+                text-align: center;
                 font-size: 14px;
             }
             .list {
+                margin: 0 auto;
                 width: 220px;
                 line-height: normal;
             }
@@ -160,14 +163,20 @@
                 font-size: 14px;
             }
             .price_back {
+                margin: 0 auto;
                 width: 270px;
                 font-size: 14px;
             }
             .bonus_heading {
+                padding-top: 25px;
                 font-size: 14px;
+                text-align: center;
+                padding-bottom: 10px;
             }
             .bonus {
+                margin-top: 10px;
                 display: block;
+                margin: 0 auto;
                 max-width: 270px;
                 height: 230px;
             }
@@ -189,6 +198,7 @@
                 display: none;
             }
             .footer_text {
+                text-align: center;
                 font-size: 14px;
             }
         }
