--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             }
             .price_back {
                 margin: 0 auto;
-                width: 270px;
+                max-width: 320px;
                 font-size: 14px;
             }
             .bonus_heading {
@@ -176,8 +176,9 @@
                 margin-top: 10px;
                 display: block;
                 margin: 0 auto;
-                max-width: 270px;
+                max-width: 320px;
                 height: 230px;
+                align-items: center;
             }
             .bonus_heading {
                 font-size: 14px;
@@ -185,10 +186,12 @@
             .bonus_item {
                 display: flex;
                 padding: 15px;
+                text-align: left;
+                justify-content: center;
             }
             .bonus_text {
                 font-size: 14px;
-                width: 120px;
+                width: 170px;
             }
             .bonus_img {
                 width: 30px;
