--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             .footer_text {
                 text-align: center;
                 font-size: 14px;
+                padding-bottom: 15px;
             }
         }
     </style>
