--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             border-color: transparent;
             border-style: solid;
         }
+        .bonus_item {
+            display: flex;
+        }
         .bonus_img {
             margin-left: 5px;
         }
@@ -120,6 +123,9 @@
             font-weight: 400;
         }
         @media only screen and (max-width: 500px) {
+            * {
+                line-height: 22px;
+            }
             .main {
                 margin-left: 1px;
             }
