--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
             margin: 0;
             box-sizing: border-box;
         }
+            .main {
+                margin-left: 390.5px;
+            }
         @media only screen and (min-width: 600px) {
+            main {
+                margin-left: 200.5px;
+            }
             .heading {
                 padding-top: 71px;
             }
@@ -35,9 +41,6 @@
             background-blend-mode: overlay;
             background-size: cover;
             background-repeat: no-repeat;
-        }
-        .main {
-            margin-left: 200.5px;
         }
         .logo {
             display: none;
@@ -98,7 +101,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 1160px;
+            max-width: 1060px;
             height: 110px;
             border-radius: 10px;
             background-color: rgba(112, 105, 99, 0.7);
