--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
             .main {
                 margin-left: 390.5px;
             }
-        @media only screen and (min-width: 600px) {
-            main {
-                margin-left: 200.5px;
+        @media (max-width: 1200px) {
+            .main {
+                margin-left: 200px;
             }
+        }
+        @media only screen and (min-width: 600px) {
             .heading {
                 padding-top: 71px;
             }
