--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
             margin: 0;
             box-sizing: border-box;
         }
-            .main {
-                margin-left: 390.5px;
-            }
-        @media (max-width: 1200px) {
+        @media (min-width: 1000px) {
             .main {
                 margin-left: 200px;
+            }
+        }
+        @media (min-width: 1500px) {
+            .main {
+                margin-left: 390.5px;
             }
         }
         @media only screen and (min-width: 600px) {
@@ -190,19 +192,19 @@
                 max-width: 320px;
                 height: 230px;
                 align-items: center;
+                padding-top: 15px;
             }
             .bonus_heading {
                 font-size: 14px;
             }
             .bonus_item {
                 display: flex;
-                padding: 15px;
-                text-align: left;
-                justify-content: center;
+                padding-top: 10px;
+                margin-left: 40px;
             }
             .bonus_text {
                 font-size: 14px;
-                width: 170px;
+                width: 140px;
             }
             .bonus_img {
                 width: 30px;
@@ -255,7 +257,7 @@
                 </div>
                 <div class="bonus_item">
                     <img class="bonus_img" src="img/verified.svg" alt="">
-                    <p class="white bonus_text">Разработка индивидуального эскиза в подарок</p>
+                    <p class="white bonus_text" style="width: 180px;">Разработка индивидуального эскиза в подарок</p>
                 </div>
                 <img src="img/logo.png" alt="" class="bonus_img_logo" style="width: 13%; margin-left: 40px;">
             </div>
