--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             .bonus_heading {
                 padding-top: 25px;
                 font-size: 14px;
+                text-align: center;
                 padding-bottom: 10px;
             }
             .bonus {
