--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             }
             .heading_form {
                 padding-bottom: 10px;
-                margin-left: 75px;
+                text-align: center;
                 font-size: 14px;
             }
             .list {
-                margin-left: 75px;
+                margin: 0 auto;
                 width: 220px;
                 line-height: normal;
             }
@@ -182,7 +182,7 @@
             .bonus_heading {
                 padding-top: 25px;
                 font-size: 14px;
-                margin-left: 75px;
+                text-align: center;
                 padding-bottom: 10px;
             }
             .bonus {
