--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             }
             .heading_form {
                 padding-bottom: 10px;
-                text-align: center;
+                margin-left: 60px;
                 font-size: 14px;
             }
             .list {
-                margin: 0 auto;
+                margin-left: 60px;
                 width: 220px;
                 line-height: normal;
             }
@@ -182,7 +182,7 @@
             .bonus_heading {
                 padding-top: 25px;
                 font-size: 14px;
-                text-align: center;
+                margin-left: 60px;
                 padding-bottom: 10px;
             }
             .bonus {
@@ -242,21 +242,23 @@
             <a href="#" class="price_back white">
                 РАССЧИТАТЬ СТОИМОСТЬ
             </a>
-            <div class="bonus_heading white">В конце теста вас ждут бонусы:</div>
-            <div class="bonus">
-                <div class="bonus_item">
-                    <img class="bonus_img" src="img/verified.svg" alt="">
-                    <p class="white bonus_text">Расчёт стоимости вашей татуировки</p>
+            <div class="bonus_block">
+                <div class="bonus_heading white">В конце теста вас ждут бонусы:</div>
+                <div class="bonus">
+                    <div class="bonus_item">
+                        <img class="bonus_img" src="img/verified.svg" alt="">
+                        <p class="white bonus_text">Расчёт стоимости вашей татуировки</p>
+                    </div>
+                    <div class="bonus_item">
+                        <img class="bonus_img" src="img/verified.svg" alt="">
+                        <p class="white bonus_text">Скидка 10% на сеанс</p>
+                    </div>
+                    <div class="bonus_item">
+                        <img class="bonus_img" src="img/verified.svg" alt="">
+                        <p class="white bonus_text" style="width: 180px;">Разработка индивидуального эскиза в подарок</p>
+                    </div>
+                    <img src="img/logo.png" alt="" class="bonus_img_logo" style="width: 13%; margin-left: 40px;">
                 </div>
-                <div class="bonus_item">
-                    <img class="bonus_img" src="img/verified.svg" alt="">
-                    <p class="white bonus_text">Скидка 10% на сеанс</p>
-                </div>
-                <div class="bonus_item">
-                    <img class="bonus_img" src="img/verified.svg" alt="">
-                    <p class="white bonus_text" style="width: 180px;">Разработка индивидуального эскиза в подарок</p>
-                </div>
-                <img src="img/logo.png" alt="" class="bonus_img_logo" style="width: 13%; margin-left: 40px;">
             </div>
             <div class="white footer_text">
                 Мы делаем татуировки, за которые не стыдно!
