--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tatu</title>
+    <link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
+    <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=1a03070aecbf5ad6d7458b1cf31d9b9b" charset="UTF-8" async></script>
 </head>
 <body>
     <style>
@@ -252,7 +254,7 @@
                 </div>
             </div>
             <div class="heading_form white">Рассчитайте стоимость татуировки за 2 минуты:</div>
-            <a href="#" class="price_back white">
+            <a href="#showquiz-78463" class="price_back white">
                 РАССЧИТАТЬ СТОИМОСТЬ
             </a>
             <div class="bonus_block">
